tests/golden/errors/str_decode_error.py
b = b"\xff\xfe"
s = b.decode()
print(s)
